@@ -1,3 +1,9 @@
+* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.2.0-0
+- Add v2 compliance_markup data
+- Drop Puppet 4 support
+- Add Puppet 6 support
+- Add puppetlabs-stdlib 6 support
+
 * Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
 - Expanded the upper limit of the concat and stdlib Puppet module versions
 - Fixed a URL in the README.md
